--- a/FileCombiner.csproj
+++ b/FileCombiner.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <PublishSingleFile>true</PublishSingleFile>
-<!--        <SelfContained>true</SelfContained>-->
+        <SelfContained>true</SelfContained>
         <PublishTrimmed>true</PublishTrimmed>
     </PropertyGroup>
 
