Update assembly name and adjust linking configuration in `FileCombiner.csproj`
Set `AssemblyName` to `filecombiner` in the project file to align with naming conventions and runtime expectations. Updated `TrimmerRoots.xml` to reflect the new assembly name while maintaining type preservation for required CLI components. Removed an unused temporary file and ensured proper configuration for single-file publishing and trimming optimizations.

--- a/FileCombiner.csproj
+++ b/FileCombiner.csproj
@@ -5,9 +5,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+
         <PublishSingleFile>true</PublishSingleFile>
         <SelfContained>true</SelfContained>
         <PublishTrimmed>true</PublishTrimmed>
+
+        <AssemblyName>filecombiner</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
