--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,17 +29,16 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
       
-    - name: Run tests
+    - name: Run tests with coverage
       run: dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
       
-    - name: Upload coverage to Codecov
+    - name: Upload coverage reports to Codecov
       if: matrix.os == 'ubuntu-latest'
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage/**/coverage.cobertura.xml
         flags: unittests
-        name: codecov-umbrella
         fail_ci_if_error: false
         verbose: true
 
