--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,17 @@ jobs:
       
     - name: List coverage files (debug)
       if: matrix.os == 'ubuntu-latest'
-      run: find ./coverage -name "*.xml" -type f
+      run: |
+        echo "Checking for coverage directory..."
+        if [ -d "./coverage" ]; then
+          echo "Coverage directory exists"
+          find ./coverage -type f -name "*.xml"
+          echo "Directory structure:"
+          ls -R ./coverage
+        else
+          echo "Coverage directory not found"
+          ls -la
+        fi
       
     - name: Upload coverage reports to Codecov
       if: matrix.os == 'ubuntu-latest'
