--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,21 +30,22 @@ jobs:
       run: dotnet build --configuration Release --no-restore
       
     - name: Run tests with coverage
-      run: dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage"
+      run: dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
       
     - name: List coverage files (debug)
       if: matrix.os == 'ubuntu-latest'
       run: |
         echo "Searching for coverage files..."
-        find . -name "coverage.cobertura.xml" -type f
-        echo "All XML files in test results:"
-        find . -path "*/TestResults/*" -name "*.xml" -type f
+        find . -name "*.xml" -type f
+        echo "TestResults directory structure:"
+        ls -R ./TestResults || echo "TestResults not found"
       
     - name: Upload coverage reports to Codecov
       if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./TestResults/**/coverage.cobertura.xml
         flags: unittests
         fail_ci_if_error: false
         verbose: true
