--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,26 +26,28 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
       
+    - name: Install dotnet-coverage
+      run: dotnet tool install --global dotnet-coverage
+      
     - name: Build
       run: dotnet build --configuration Release --no-restore
       
     - name: Run tests with coverage
-      run: dotnet test --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
+      run: dotnet-coverage collect "dotnet test --configuration Release --no-build --verbosity normal" -f xml -o coverage.xml
       
     - name: List coverage files (debug)
       if: matrix.os == 'ubuntu-latest'
       run: |
         echo "Searching for coverage files..."
-        find . -name "*.xml" -type f
-        echo "TestResults directory structure:"
-        ls -R ./TestResults || echo "TestResults not found"
+        ls -la *.xml || echo "No XML files found"
+        cat coverage.xml | head -20 || echo "Cannot read coverage.xml"
       
     - name: Upload coverage reports to Codecov
       if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./TestResults/**/coverage.cobertura.xml
+        files: ./coverage.xml
         flags: unittests
         fail_ci_if_error: false
         verbose: true
