refactor: replace coverlet with dotnet-coverage and simplify CI to single runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,8 @@ on:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Test and Coverage
+    runs-on: ubuntu-latest
         
     steps:
     - name: Checkout code
@@ -36,14 +33,12 @@ jobs:
       run: dotnet-coverage collect "dotnet test --configuration Release --no-build --verbosity normal" -f xml -o coverage.xml
       
     - name: List coverage files (debug)
-      if: matrix.os == 'ubuntu-latest'
       run: |
         echo "Searching for coverage files..."
         ls -la *.xml || echo "No XML files found"
         cat coverage.xml | head -20 || echo "Cannot read coverage.xml"
       
     - name: Upload coverage reports to Codecov
-      if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
