--- a/FileCombiner.Tests/FileCombiner.Tests.csproj
+++ b/FileCombiner.Tests/FileCombiner.Tests.csproj
@@ -9,6 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="FsCheck" Version="2.16.6" />
         <PackageReference Include="FsCheck.Xunit" Version="2.16.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
@@ -21,6 +29,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\FileCombiner.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="TestFixtures\**\*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
