--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,10 @@ jobs:
       run: |
         echo "Searching for coverage files..."
         ls -la *.xml || echo "No XML files found"
-        cat coverage.cobertura.xml | head -20 || echo "Cannot read coverage.cobertura.xml"
+        echo "=== Coverage file content (first 50 lines) ==="
+        head -50 coverage.cobertura.xml || echo "Cannot read coverage.cobertura.xml"
+        echo "=== Coverage file stats ==="
+        grep -E 'line-rate|branch-rate|lines-covered|lines-valid' coverage.cobertura.xml | head -5 || echo "Cannot parse coverage stats"
       
     - name: Upload coverage reports to Codecov
       if: matrix.os == 'ubuntu-latest'
