--- a/FileCombiner.csproj
+++ b/FileCombiner.csproj
@@ -11,6 +11,7 @@
         <PublishTrimmed>true</PublishTrimmed>
 
         <AssemblyName>filecombiner</AssemblyName>
+        <Version>2.0.0</Version>
         
         <!-- Debug symbols for code coverage -->
         <DebugType>portable</DebugType>
