--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        lfs: true
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -65,6 +67,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        lfs: true
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
